@@ -46,6 +46,7 @@ Revision 0.3.0, released XX-XX-2021
 - Add RFC4262 providing S/MIME Capabilities Certificate Extension
 - Add RFC6066 providing PkiPath for the pkix-pkipath media type
 - Add RFC6492 providing a protocol for provisioning RPKI certificates
+- Add RFC6962 providing Certificate Transparency
 
 Revision 0.2.8, released 16-11-2019
 -----------------------------------
